# gfxperiment

./: Cargo.toml
src/: color.rs  fill_quad.wgsl  gfx.rs  lib.rs  main.rs  quad.rs  shader.wgsl  texture.rs  textured_quad.wgsl  util.rs  vertex.rs
