[package]
name = "gfxperiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
image = "0.25.1"
tokio = { version = "1.37.0", features = ["full"] }
wgpu = "0.19.3"
winit = "0.29.15"
